<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme2">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/canhan"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="@dimen/txt_18sp"/>
        <ImageButton
            android:id="@+id/notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_notifications"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/mg_10dp"
            android:scaleX="1.3"
            android:scaleY="1.3"/>

    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/tren"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/txt_chucai"
                android:layout_width="@dimen/mg_70dp"
                android:layout_height="@dimen/mg_70dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/mg_15dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="S"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_username1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/mg_5dp"
                android:text="sysadmin"
                android:gravity="center"
                android:textSize="@dimen/txt_22sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0123456789"
                android:gravity="center"
                android:scaleX="1.1"
                android:textSize="@dimen/txt_17sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/boder"

            android:layout_marginLeft="@dimen/mg_20dp"
            android:layout_marginRight="@dimen/mg_20dp"
            android:layout_marginTop="180dp"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_person_black_24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tai_khoan"
                    android:textColor="#000000"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:id="@+id/txt_username2"

                    android:layout_width="wrap_content"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="abc"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mg_5dp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/mg_5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/mg_20dp"
                android:layout_marginRight="@dimen/mg_20dp"
                android:background="#dad9de"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/lock"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:padding="@dimen/mg_5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:layout_weight="1"

                    android:gravity="left"
                    android:padding="@dimen/mg_5dp"
                    android:text="@string/doi_mat_khau"
                    android:textColor="#000000"
                    android:textSize="@dimen/txt_17sp" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/next"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mg_5dp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/mg_5dp"
                android:layout_marginBottom="@dimen/mg_5dp"
                android:layout_marginLeft="@dimen/mg_20dp"
                android:layout_marginRight="@dimen/mg_20dp"
                android:background="#dad9de"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/email"
                    android:layout_gravity="center_vertical"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#000000"

                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:id="@+id/txt_email1"

                    android:layout_width="wrap_content"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="abc@gmail.com"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mg_5dp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/mg_5dp"
                android:layout_marginBottom="@dimen/mg_5dp"
                android:layout_marginLeft="@dimen/mg_20dp"
                android:layout_marginRight="@dimen/mg_20dp"
                android:background="#dad9de"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/map"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ban_do"
                    android:textColor="#000000"

                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:padding="@dimen/mg_5dp"/>
                <Spinner

                    android:layout_width="wrap_content"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="abc"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mg_5dp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/mg_5dp"
                android:layout_marginBottom="@dimen/mg_5dp"
                android:layout_marginLeft="@dimen/mg_20dp"
                android:layout_marginRight="@dimen/mg_20dp"
                android:background="#dad9de"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/language"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:padding="@dimen/mg_5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngon_ngu"
                    android:textColor="#000000"

                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:layout_weight="3"
                    android:padding="@dimen/mg_5dp"/>

                <Spinner
                    android:id="@+id/spn_language"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/mg_5dp"
                    android:layout_weight="1"
                    android:text="abc"
                    android:textColor="#000000"
                    android:textSize="@dimen/txt_17sp" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/mg_5dp"
                android:layout_marginBottom="@dimen/mg_5dp"
                android:layout_marginLeft="@dimen/mg_20dp"
                android:layout_marginRight="@dimen/mg_20dp"
                android:background="#dad9de"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/mg_5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/output"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dang_xuat"
                    android:textColor="#000000"

                    android:layout_marginLeft="@dimen/mg_10dp"
                    android:textSize="@dimen/txt_17sp"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:padding="@dimen/mg_5dp"/>
                <ImageButton
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/next"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/mg_5dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>